Fix overlapping skill tags

--- a/scss/typography.scss
+++ b/scss/typography.scss
@@ -198,4 +198,10 @@ ul.skills-list li {
     background: $silver;
     border-radius: 2px;
     padding: 0.5rem 0.675rem;
+    display: inline-block;
+    margin-bottom: 0.375rem;
+
+    @include bp(m) {
+      margin-bottom: 0;
+    }
 }
